// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LGraph configure() > LGraph matches previous snapshot (normal configure() usage) > configuredBasicGraph 1`] = `
LGraph {
  "catchErrors": true,
  "config": {},
  "connectionGestureDepth": 0,
  "elapsedTime": 0.01,
  "errorsInExecution": undefined,
  "events": CustomEventTarget {},
  "executionTime": undefined,
  "executionTimerId": undefined,
  "extra": {},
  "filter": undefined,
  "fixedTimeLapse": 0.01,
  "fixedtime": 0,
  "globaltime": 0,
  "id": "ca9da7d8-fddd-4707-ad32-67be9be13140",
  "iteration": 0,
  "lastTriggerTime": undefined,
  "lastUpdateTime": 0,
  "links": Map {},
  "listOfGraphCanvas": null,
  "nodesActioning": [],
  "nodesExecutedAction": [],
  "nodesExecuting": [],
  "revision": 0,
  "runningtime": 0,
  "starttime": 0,
  "state": {
    "lastGroupId": 123,
    "lastLinkId": 0,
    "lastNodeId": 1,
    "lastRerouteId": 0,
  },
  "status": 1,
  "vars": {},
  "version": 5,
}
`;

exports[`LGraph configure() > LGraph matches previous snapshot (normal configure() usage) > configuredMinGraph 1`] = `
LGraph {
  "catchErrors": true,
  "config": {},
  "connectionGestureDepth": 0,
  "elapsedTime": 0.01,
  "errorsInExecution": undefined,
  "events": CustomEventTarget {},
  "executionTime": undefined,
  "executionTimerId": undefined,
  "extra": {},
  "filter": undefined,
  "fixedTimeLapse": 0.01,
  "fixedtime": 0,
  "globaltime": 0,
  "id": "d175890f-716a-4ece-ba33-1d17a513b7be",
  "iteration": 0,
  "lastTriggerTime": undefined,
  "lastUpdateTime": 0,
  "links": Map {},
  "listOfGraphCanvas": null,
  "nodesActioning": [],
  "nodesExecutedAction": [],
  "nodesExecuting": [],
  "revision": 0,
  "runningtime": 0,
  "starttime": 0,
  "state": {
    "lastGroupId": 0,
    "lastLinkId": 0,
    "lastNodeId": 0,
    "lastRerouteId": 0,
  },
  "status": 1,
  "vars": {},
  "version": 2,
}
`;
